# myChain

./: .gitignore  Cargo.toml  NOTES.MD  README.MD  chain-spec-plain.json  chain-spec.json  customSpec.json  customSpecRaw.json  myChainRaw.json  no-bootnodes-chain-spec-plain.json~
chain/: Dockerfile
chain/node/: Cargo.toml
chain/node/src/: command.rs  service.rs
chain/precompiles/example/: Cargo.toml
chain/precompiles/example/src/: lib.rs
chain/precompiles/faucet/: Cargo.toml
chain/precompiles/faucet/src/: lib.rs
chain/precompiles/gasometer/: Cargo.toml
chain/precompiles/gasometer/src/: lib.rs
chain/precompiles/prepay-gas/: Cargo.toml
chain/precompiles/prepay-gas/src/: lib.rs
chain/precompiles/utils/FunctionSelector/: Cargo.toml
chain/precompiles/utils/FunctionSelector/src/: lib.rs
chain/precompiles/utils/evmdata/: Cargo.toml
chain/precompiles/utils/evmdata/src/: lib.rs
chain/precompiles/utils/gasometer/: Cargo.toml
chain/precompiles/utils/gasometer/src/: lib.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs  precompiles.rs
client/rpc/: Cargo.toml
docker/: Dockerfile-mychain  README.MD  docker-compose.yml
frame/evm/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs
pallets/xcm-transactor/: Cargo.toml
pallets/xcm-transactor/src/: lib.rs  migrations.rs  mock.rs  weights.rs
precompiles/: prepayGas.sol
precompiles/prepay-gas/: Cargo.toml
precompiles/prepay-gas/src/: lib.rs
precompiles/utils/: cargo.toml
precompiles/utils/src/: lib.rs
primitives/xcm/: Cargo.toml
primitives/xcm/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
test-utils/client/: Cargo.toml
utils/: Cargo.toml
utils/src/: lib.rs
