[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'myChain-node'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'
version = '0.0.1'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
async-trait = '0.1'
futures = '0.3'
jsonrpc-core = '18.0.0'
jsonrpc-pubsub = '18.0.0'
log = '0.4'
structopt = '0.3.8'

[dependencies.fc-consensus]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.fc-db]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.fc-mapping-sync]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.fc-rpc]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.fc-rpc-core]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.fp-consensus]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.frame-benchmarking-cli]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.frontier-template-runtime]
default-features = false
features = ['std']
path = '../runtime'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-transaction-payment-rpc]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-basic-authorship]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-cli]
features = ['wasmtime']
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-client-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-consensus]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-consensus-aura]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-consensus-manual-seal]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-executor]
features = ['wasmtime']
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-finality-grandpa]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-keystore]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-network]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-rpc]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-rpc-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-service]
features = ['wasmtime']
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-telemetry]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-transaction-pool]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sc-transaction-pool-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-consensus]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.parity-util-mem]
default-features = false
parity-util-mem = "0.11.0"

[dependencies.substrate-prometheus-endpoint]
version = '0.9.0'

[dependencies.sp-finality-grandpa]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-timestamp]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.substrate-frame-rpc-system]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[features]
aura = ['frontier-template-runtime/aura']
default = ['aura']
manual-seal = ['frontier-template-runtime/manual-seal']
runtime-benchmarks = ['frontier-template-runtime/runtime-benchmarks']
[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/purestake/substrate'