[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'frontier-template-runtime'
publish = false
version = '0.0.1'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
aura = []
default = [
    'std',
    'aura',
]
manual-seal = []
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-evm/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'fp-rpc/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-dynamic-fee/std',
    'pallet-evm-precompile-simple/std',
    'pallet-evm-precompile-sha3fips/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-benchmarking/std',
    'frame-system-benchmarking/std',
]

[dependencies]
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.prepay-gas]
default-features = false
path = '../precompiles/prepay-gas'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"
optional = true

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"
package = 'frame-system'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"
optional = true

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/purestake/frontier.git'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.136'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-io]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-session]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[dependencies.sp-version]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"

[build-dependencies.substrate-wasm-builder]
default-features = false
git = 'https://github.com/purestake/substrate'
branch = "moonbeam-polkadot-v0.9.18"
