[package]
name = "utils"
version = "0.1.0"
edition = "2021"


[dependencies.evm]
default-features = false
version = '0.35.0'

[dependencies.serde]
features = ["derive"]
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
version = "3.0.0"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
version = "4.0.0"
branch = "master"