[package]
name = "xcm-transactor-pallet"
version = "0.1.0"
edition = "2021"


[dependencies]
log = {version = "0.4.17", default-features = false }
serde = { version = "1.0.124", optional = true, default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }

frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

xcm-primitives = {path = "../../primitives/xcm", default-features = false}

orml-traits = { git = "https://github.com/purestake/open-runtime-module-library", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false }




