[package]
name = "prepay-gas"
version = "0.1.0"
edition = "2021"

[dependencies.evm-precompiles]
default-features = false
version = '0.2.1'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '0b962f218f0cdd796dadfe26c3f09e68f7861b26'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.fp-evm]
default-features = false
git = "https://github.com/paritytech/frontier.git"
rev = "0b962f218f0cdd796dadfe26c3f09e68f7861b26"
version = '3.0.0-dev'

[dependencies.evm-runtime]
default-features = false
version = "0.35.0"

[dependencies]
utils = {default-features = false, path = '../utils/'}




