[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-evm = { path = "../../../primitives/evm", default-features = false }
pallet-evm = { path = "../../../frame/evm", default-features = false }
gasometer = {path = "../utils/gasometer", default-featuers = false}
evmdata = {path = "../utils/evmdata", default-features = false}
FunctionSelector = {path = "../utils/FunctionSelector", default-features = false}
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
num_enum = { version = "0.5.7", default-features = false }