[package]
name = "evmdata"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
gasometer = {path = "../gasometer", default-featuers = false}
log = {version = "0.4",default-features = false }
impl-trait-for-tuples = {version = "0.2.2", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
