[package]
name = "gasometer"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-evm = { path = "../../../../primitives/evm", default-features = false }
pallet-evm = { path = "../../../../frame/evm", default-features = false }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false}
