[package]
name = "gasometer"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-evm = { path = "../../../../primitives/evm", default-features = false }
pallet-evm = { path = "../../../../frame/evm", default-features = false }
sp-std = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }